# HEIG_POA

lab1-matrix/: .gitignore  CMakeLists.txt  README.md
lab1-matrix/src/: main.cpp
lab1-matrix/src/Matrix/: Matrix.cpp  Matrix.hpp
lab1-matrix/src/Operators/: Operator.h
lab1-matrix/src/Operators/Add/: Add.cpp  Add.h
lab1-matrix/src/Operators/Multiply/: Multiply.cpp  Multiply.h
lab1-matrix/src/Operators/Sub/: Sub.cpp  Sub.h
lab1-matrix/src/Utils/: Utils.cpp  Utils.h
lab1-matrix/tests/: MatrixTest.cpp
lab1-matrix/uml/: lab01-matrix-vanhove_slimani-uml.mdj
lab2-squadron/: CMakeLists.txt  README.md
lab2-squadron/UML/: Squadron.mdj
lab2-squadron/instructions/: README.md
lab2-squadron/src/: constants.hpp  main.cpp
lab2-squadron/src/ship/: Ship.cpp  Ship.hpp  Tie.cpp  Tie.hpp  TieFighter.cpp  TieFighter.hpp  TieInterceptor.cpp  TieInterceptor.hpp
lab2-squadron/src/ship/cargo/: CargoShip.cpp  CargoShip.hpp  ImperialShuttle.cpp  ImperialShuttle.hpp  StarDreadnought.cpp  StarDreadnought.hpp
lab2-squadron/src/squadron/: Squadron.cpp  Squadron.hpp
lab2-squadron/src/test/: ShipListTest.cpp  ShipTest.cpp  SquadronTest.cpp
lab2-squadron/src/utils/: ShipList.cpp  ShipList.hpp
lab3-river/: CMakeLists.txt  README.md
lab3-river/UML/: UML.mdj
lab3-river/src/: Controller.cpp  Controller.h  ControllerConstants.h  Status.h  main.cpp
lab3-river/src/Containers/: Bank.cpp  Bank.h  Boat.cpp  Boat.h  Container.cpp  Container.h
lab3-river/src/people/: Boy.cpp  Boy.h  Girl.cpp  Girl.h  Kid.cpp  Kid.h  Parent.cpp  Parent.h  Person.cpp  Person.h  Policeman.cpp  Policeman.h  Thief.cpp  Thief.h
lab3-river/src/test/: ContainerTest.cpp  RulesTest.cpp
lab4-buffy/: CMakeLists.txt  README.md
lab4-buffy/UML/: L4_Buffy_Slimani_VanHove_UML.mdj
lab4-buffy/src/: Constants.hpp  Field.cpp  Field.hpp  FieldImpl.hpp  Game.cpp  Game.hpp  Utils.hpp  main.cpp
lab4-buffy/src/action/: Action.cpp  Action.hpp  Kill.cpp  Kill.hpp  Move.cpp  Move.hpp  Transform.cpp  Transform.hpp
lab4-buffy/src/character/: Buffy.cpp  Buffy.hpp  Human.cpp  Human.hpp  Humanoid.cpp  Humanoid.hpp  Vampire.cpp  Vampire.hpp
lab4-buffy/src/gui/: FieldDisplayer.cpp  FieldDisplayer.hpp
